--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <base href="/">
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> {% if IsDevEnvironment %}
     <!-- css -->
