Added support for loaders in app. Added loading templates.

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> {% if IsDevEnvironment %}
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/css/loading-bar.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css"> {% endif %} {% if !IsDevEnvironment %}
     <!-- minified css -->
     <link rel="stylesheet" type="text/css" href="/css/style.min.css"> {% endif %}
@@ -99,6 +100,7 @@
     <script type="text/javascript" src="/javascript/libraries/angular.min.js"></script>
     <script type="text/javascript" src="/javascript/libraries/angular.route.min.js"></script>
     <script type="text/javascript" src="/javascript/libraries/bootstrap.js"></script>
+    <script type="text/javascript" src="/javascript/libraries/loading-bar.js"></script>
     <!-- application scripts -->
     <script type="text/javascript" src="/javascript/utilities/extensions.js"></script>
     <script type="text/javascript" src="/javascript/application.js"></script>
