--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE student-attendance-list>
+<!DOCTYPE>
 <html lang="en" data-ng-app="mark-it">
 
 <head>
@@ -96,23 +96,23 @@
     </div>
     {% if IsDevEnvironment %}
     <!-- library scripts -->
-    <script type="text/javascript" src="/javascript/libraries/jquery.min.js"></script>
-    <script type="text/javascript" src="/javascript/libraries/angular.min.js"></script>
-    <script type="text/javascript" src="/javascript/libraries/angular.route.min.js"></script>
-    <script type="text/javascript" src="/javascript/libraries/bootstrap.js"></script>
-    <script type="text/javascript" src="/javascript/libraries/loading-bar.js"></script>
+    <script src="/javascript/libraries/jquery.min.js"></script>
+    <script src="/javascript/libraries/angular.min.js"></script>
+    <script src="/javascript/libraries/angular.route.min.js"></script>
+    <script src="/javascript/libraries/bootstrap.js"></script>
+    <script src="/javascript/libraries/loading-bar.js"></script>
     <!-- application scripts -->
-    <script type="text/javascript" src="/javascript/utilities/extensions.js"></script>
-    <script type="text/javascript" src="/javascript/application.js"></script>
-    <script type="text/javascript" src="/javascript/angular/routes/routes.js"></script>
-    <script type="text/javascript" src="/javascript/angular/factories/db-provider.js"></script>
-    <script type="text/javascript" src="/javascript/angular/controllers/attendance.js"></script>
-    <script type="text/javascript" src="/javascript/angular/controllers/student.js"></script>
-    <script type="text/javascript" src="/javascript/angular/controllers/notification.js"></script>
-    <script type="text/javascript" src="/javascript/angular/controllers/class-room.js"></script>
+    <script src="/javascript/utilities/extensions.js"></script>
+    <script src="/javascript/application.js"></script>
+    <script src="/javascript/angular/routes/routes.js"></script>
+    <script src="/javascript/angular/factories/db-provider.js"></script>
+    <script src="/javascript/angular/controllers/attendance.js"></script>
+    <script src="/javascript/angular/controllers/student.js"></script>
+    <script src="/javascript/angular/controllers/notification.js"></script>
+    <script src="/javascript/angular/controllers/class-room.js"></script>
     {% endif %} {% if !IsDevEnvironment %}
     <!-- minified script file -->
-    <script type="text/javascript" src="/javascript/script.min.js"></script>
+    <script src="/javascript/script.min.js"></script>
     {% endif %}
 </body>
 
