--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -90,6 +90,7 @@
     <script src="/javascript/application.js"></script>
     <script src="/javascript/angular/routes/routes.js"></script>
     <script src="/javascript/angular/factories/app-data.js"></script>
+    <script src="/javascript/angular/controllers/header.js"></script>
     <script src="/javascript/angular/controllers/authentication.js"></script>
     <script src="/javascript/angular/controllers/profile.js"></script>
     <script src="/javascript/angular/controllers/attendance.js"></script>
